# ec_weather_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/feed/: mod.rs
src/feed/parsed/: mod.rs
