[package]
name = "ec_weather_rust"
version = "0.1.0"
authors = ["Yi Feng Yang <yifeng@yfyang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
reqwest = { version = "0.10.7", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }